--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
 	"engines": {
 		"node": ">=6"
 	},
+	"main": "index.js",
+	"module": "lib/index.esm.js",
 	"scripts": {
+		"build": "rollup -c",
 		"benchmark": "node benchmark.js",
 		"test": "xo && ava && tsd"
 	},
 	"files": [
 		"index.js",
+		"index.esm.js",
 		"index.d.ts"
 	],
 	"keywords": [
@@ -42,10 +46,15 @@
 		"strict-uri-encode": "^2.0.0"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.11.1",
+		"@babel/preset-env": "^7.11.0",
+		"@rollup/plugin-babel": "^5.2.0",
+		"@rollup/plugin-commonjs": "^15.0.0",
 		"ava": "^1.4.1",
 		"benchmark": "^2.1.4",
 		"deep-equal": "^1.0.1",
 		"fast-check": "^1.5.0",
+		"rollup": "^2.26.4",
 		"tsd": "^0.7.3",
 		"xo": "^0.24.0"
 	}
